Fix Frame border stretching off window after resize

--- a/frontend_src/css/layout/container.css
+++ b/frontend_src/css/layout/container.css
@@ -1,12 +1,11 @@
+#container {
+    overflow: visible;
+}
+
 .frame {
     position: absolute;
     box-sizing: border-box;
-    border: solid var(--chart-border) 2px;
     background-color: var(--layout-main-fill);
-}
-
-.frame[active], .frame[target] {
-    border-color: transparent;
 }
 
 .frame_ruler {
